# fuzzysearch-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: artifacts.yml  rust.yml
src/: database.rs  fuzzysearch.rs  main.rs
