[package]
name = "fuzzysearch-cli"
version = "0.2.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
description = "Match a large number of images against the FuzzySearch API"
repository = "https://github.com/Syfaro/fuzzysearch-cli"
readme = "README.md"
license = "MIT"

[dependencies]
clap = "3.0.0-beta.5"
pretty_env_logger = "0.4"
img_hash = "3"
image = "0.23"
log = "0.4"
walkdir = "2"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.26", features = ["bundled", "serde_json"] }
directories = "4"
indicatif = "0.16"
csv = "1"
hamming = "0.1"
bk-tree = "0.4"
base64 = "0.13"
anyhow = "1"
rayon = "1"
r2d2 = "0.8"
r2d2_sqlite = { version = "0.19", features = ["bundled"] }
