[package]
name = "fuzzysearch-cli"
version = "0.2.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
description = "Match a large number of images against the FuzzySearch API"
repository = "https://github.com/Syfaro/fuzzysearch-cli"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "3.2.21", features = ["derive", "env"] }
pretty_env_logger = "0.4.0"
img_hash = "3.2.0"
image = "0.23.14"
log = "0.4.17"
walkdir = "2.3.2"
ureq = { version = "2.5.0", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
rusqlite = { version = "0.28.0", features = ["bundled", "serde_json"] }
directories = "4.0.1"
indicatif = "0.17.1"
csv = "1.1.6"
hamming = "0.1.3"
bk-tree = "0.4.0"
base64 = "0.13.0"
anyhow = "1.0.65"
rayon = "1.5.3"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.21.0", features = ["bundled"] }
flate2 = "1.0.24"
