[package]
name = "fuzzysearch-cli"
version = "0.3.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2021"
description = "Match a large number of images against the FuzzySearch API"
repository = "https://github.com/Syfaro/fuzzysearch-cli"
readme = "README.md"
license = "MIT"
publish = false

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true

[dependencies]
anyhow = "1.0.65"
base64 = "0.21.0"
bk-tree = "0.5.0"
clap = { version = "4.1.6", features = ["derive", "env"] }
csv = "1.1.6"
directories = "5.0.1"
flate2 = "1.0.24"
hamming = "0.1.3"
image = "0.23.14"
img_hash = "3.2.0"
indicatif = "0.17.1"
log = "0.4.17"
pretty_env_logger = "0.5.0"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.23.0", features = ["bundled"] }
rayon = "1.5.3"
rusqlite = { version = "0.30.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
ureq = { version = "2.5.0", features = ["json"] }
walkdir = "2.3.2"
